charts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: gateway-ingress
  namespace: api-gateway
spec:
  rules:
  - host: api.dan-leonard.com
    http:
      paths:
      - backend:
          service:
            name: gateway
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.dan-leonard.com
    secretName: tls-secret
